# blink

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
screenshots/: README.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: BlinkLogo.tsx  BreakTip.tsx  FullScreenBreak.tsx  InfoCard.tsx  InlineTip.tsx  Settings.tsx  ThemeToggle.tsx  TimerDisplay.tsx
src/components/ui/: Button.tsx  ThemePreview.tsx
src/hooks/: useTheme.ts  useTimer.ts
src/lib/: themes.ts
src/services/: notification.ts  window.ts
src/store/: timer.ts
